add permit framework

--- a/src/app/index.less
+++ b/src/app/index.less
@@ -27,6 +27,10 @@
   }
 }
 
+.hidden {
+	display: none;
+}
+
 /**
  *  Do not remove the comments below. It's the markers used by gulp-inject to inject
  *  all your less files automatically
