--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,40 +1,33 @@
 <meta charset="utf-8" >
 <nav id="js-aside" class="mala-aside">
-    <ul class="mala-subnavi-list">
-        <li class="mala-subnavi-item">
-            <div class="mala-subnavi-lead mala-clearfix report"> <i class="fa fa-exchange fa-fw"></i> 数据报告
-                <span class="mala-arrow mala-arrow-down mala-fr"></span>
+	<ul ng-repeat="topItem in vm.data" class="mala-subnavi-list">
+		<li class="mala-subnavi-item" ng-if="vm.hasPermit(topItem)">
+			<div class="mala-subnavi-lead mala-clearfix report"> 
+				<i ng-if="topItem.hasIcon" class="{{topItem.iconClass}}"></i>
+				{{topItem.pageDisplayName}}
+                <span ng-if="topItem.hasChildren" class="mala-arrow mala-arrow-down mala-fr"></span>
             </div>
-            <ul class="mala-thirdnavi-list" style="margin-left: 20px;">
-                <li class="mala-subnavi-item">
-                    <a class="mala-subnavi-link select active total_report" href="/#/data?reportId={{vm.overview.reportId}}" ng-click="vm.showReport(vm.overview)"> <i class="fa fa-exchange fa-fw"></i>{{vm.overview.name}}</a>
-                </li>
-                <li class="mala-thirdnavi-item">
-                    <div class="mala-subnavi-lead mala-clearfix product_report"> <i class="fa fa-exchange fa-fw"></i> 产品线数据
-                        <span class="mala-arrow mala-arrow-down mala-fr"></span>
-                    </div>
+            <ul class="mala-thirdnavi-list" style="margin-left: 20px;" ng-repeat="secondItem in topItem.children">
+            	<li class="mala-subnavi-item" ng-if="secondItem.hasChildren && vm.hasPermit(secondItem)" >
+            		<div class="mala-subnavi-lead mala-clearfix product_report">
+	                    	<i class="fa fa-exchange fa-fw"></i>
+	                    	{{secondItem.pageDisplayName}}
+	                    	<span class="mala-arrow mala-arrow-down mala-fr"></span>
+            		</div>
                     <ul class="mala-thirdnavi-list">
-                    	<li ng-repeat="business in vm.businesses" class="mala-thirdnavi-item">
-                    		<a class="mala-thirdnavi-link" href="/#/data?reportId={{business.reportId}}" ng-click="vm.showReport(business)">{{business.name}}</a>
+                    	<li ng-repeat="thirdItem in secondItem.children" class="mala-thirdnavi-item">
+                    		<a nf-if="vm.hasPermit(thirdItem)" ng-click="vm.onClick(thirdItem)" ng-class="vm.selectedPage == secondItem.pageId ? 'active' : ''" class="mala-thirdnavi-link select" href="{{thirdItem.href}}">{{thirdItem.pageDisplayName}}</a>
                     	</li>
                     </ul>
                 </li>
-                <li class="mala-subnavi-item">
-                    <a class="mala-subnavi-link select " href="/crm/site/index?reportId=0"  reportId="0"> <i class="fa fa-taxi fa-fw"></i>自定义报表</a>
+                <li ng-if="!secondItem.hasChildren && vm.hasPermit(secondItem)" class="mala-subnavi-item">
+                	<a ng-click="vm.onClick(secondItem)" ng-class="vm.selectedPage == secondItem.pageId ? 'select active' : ''" class="mala-subnavi-link select total_report" href="{{secondItem.href}}"> 
+                		<i class="fa fa-exchange fa-fw"></i>
+                		{{secondItem.pageDisplayName}}
+                	</a>
                 </li>
             </ul>
-        </li>
-    </ul>
-    <ul class="mala-subnavi-list">
-        <li class="mala-subnavi-item">
-            <div class="mala-subnavi-lead mala-clearfix" id="trackdiv"> <i class="fa fa-exchange fa-fw"></i> 问题追踪
-                <span class="mala-arrow mala-arrow-down mala-fr"></span>
-            </div>
-            <ul class="mala-thirdnavi-list" style="margin-left: 20px;">
-                <li class="mala-subnavi-item">
-                    <a class="mala-subnavi-link" href="/crm/assign/index" id="tracklist"> <i class="fa fa-exchange fa-fw"></i>问题列表</a>
-                </li>
-            </ul>
-        </li>
-    </ul>
+		</li>
+	</ul>
+
 </nav>
